# buildspace

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  components.json  environment.yml  fly.toml  package.json  pnpm-lock.yaml  requirements.txt  save_embeddings_to_db.py  schema.sql  youtube-download.js
.github/workflows/: fly.yml
app/: layout.tsx  page.tsx
components/: CallNavbar.tsx  NameValueRow.tsx  Playground.tsx  PlaygroundDeviceSelector.tsx  PlaygroundTile.tsx
components/ui/: dropdown-menu.tsx  menubar.tsx  separator.tsx
hooks/: useAppConfig.tsx
season/: s3.html
seasons/: s3.json  s3_raw.json
server/: agent.py  llm.py
src/: main.rs
