[package]
name = "buildspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-openai = "0.18.3"
bytes = "1.5.0"
deepgram = "0.4.0"
dotenvy = "0.15.7"
futures = "0.3.30"
futures-util = "0.3.30"
headless_chrome = "1.0.9"
http-body-util = "0.1.0"
hyper = { version = "0.14.9", features = ["client"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.3", features = ["client"] }
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["stream"] }
rustube = "0.6.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
